--- a/.github/workflows/update-index.yaml
+++ b/.github/workflows/update-index.yaml
@@ -14,6 +14,9 @@ jobs:
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
       - run: |
+          git config user.email savi-lang-bot@gmail.com
+          git config user.name savi-lang-bot
+
           git remote add github "https://$GITHUB_ACTOR:$GITHUB_TOKEN@github.com/$GITHUB_REPOSITORY.git"
           git pull github ${GITHUB_REF} --ff-only
 
