Catch error in `update-index` CI workflow when there is nothing to commit.

--- a/.github/workflows/update-index.yaml
+++ b/.github/workflows/update-index.yaml
@@ -25,5 +25,5 @@ jobs:
 
           git add .
 
-          git commit -m "Update library index"
+          git commit -m "Update library index" || echo "Nothing to commit."
           git push github HEAD:${GITHUB_REF}
